# qt-chat-client

./: CMakeLists.txt  README.md  TcpClient.cpp  TcpClient.hpp  main.cpp  main.qml
